--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-css-unit": "^1.2.2",
     "gulp-csso": "^2.0.0",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.6",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^3.0.1"
   }
 }
