--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-css-unit": "^1.2.2",
     "gulp-csso": "^2.0.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.6",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^3.0.1"
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
